# Computer-Vision-Final-Project

./: BallClassification.cpp  BallClassification.h  BallDetection.cpp  BallDetection.h  Bbox.cpp  Bbox.h  CMakeLists.txt  DisplayFunctions.cpp  DisplayFunctions.h  EvaluationMetrics.cpp  EvaluationMetrics.h  Final_Project_CV.cpp  Final_Project_CV.sln  Lab1.vcxproj  Lab1.vcxproj.filters  MainUtilities.cpp  MainUtilities.h  MiniMap.cpp  MiniMap.h  README.md  ReportUtilitiesFunctions.cpp  ReportUtilitiesFunctions.h  SegmentationEvaluation.cpp  SegmentationEvaluation.h  Segmentation_Functions.cpp  Segmentation_Functions.h  TableDetection.cpp  TableDetection.h  TrackerFunctions.cpp  TrackerFunctions.h  main.cpp  myProgram
CV_Project/: CV_Project.sln
CV_Project/OpenCV_test/: BallDetection.cpp  BallDetector.cpp  BallDetector.h  Bbox.h  DisplayFunctions.cpp  DisplayFunctions.h  LinesDetector.cpp  LinesDetector.h  MiniMap.cpp  MiniMap.h  OpenCV_test.vcxproj  OpenCV_test.vcxproj.filters  Seed.cpp  Seed.h  Segmentator.cpp  Segmentator.h  TableDetection.cpp  TrackerFunctions.h  main.cpp
reports/: report.txt  report1.txt
scripts/: build_and_run.sh  setup_singularity.sh
